2006-06-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml, doc/ref.xml, doc/user.xml: Edits.
	* doc/dejagnu.texi: Regenerate.

2006-06-06  Ben Elliston  <bje@gnu.org>

	Import from GCC tree:
	2006-06-02  Richard Earnshaw  <rearnsha@arm.com>
		    Mike Stump  <mrs@apple.com>

	* compare_tests: Handle multilibs better.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Regnerate using Docbook2X 0.8.7.

	* configure.ac: Check for docbook2texi, not docbook2x-texi.  The
	wrapper script changed its name again in the latest release.
	* configure: Regenerate.
	* Makefile.am (DOCBOOK2X_TEXI): Rename from this ..
	(DOCBOOK2TEXI): .. to this.
	(doc/dejagnu.texi): Do not use output-file parameter to deposit
	the .texi file into the source directory; use mv(1) instead. Set
	directory-description parameter.
	* Makefile.in: Likewise.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config/sim.exp (sim_upload): Match up argument names.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config/dos.exp (dos_open): Only run global board_info once at
	the beginning of the proc; remove duplicates.
	(dos_load): Use file join to separate path components.
	(dos_copy_upload): Likewise.
	* lib/remote.exp (call_remote): Use error, not "blooie" to trigger
	an error.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* contrib/compare_tests: Import from the GCC contrib directory.

2006-05-24  Ben Elliston  <bje@gnu.org>

	* runtest.exp (verbose): Brace some expressions.
	(load_file, search_and_load_file): Likewise.
	(runtest): Likewise.

2006-05-23  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp (gdb_comm_load): Brace some expressions.
	* config/i960.exp (i960_spawn): Initialise status.
	* config/netware.exp (${board}_init): Brace some if expressions.
	* lib/dg.exp (dg-test): Brace some expressions.
	* lib/framework.exp (clone_output, log_and_exit, log_summary,